feat: optimize lambda expressions for improved readability and performance